// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect should escape items in menu 1`] = `

<div class="list__tile__title">
  &lt;strong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect should escape items in menu 2`] = `

<div class="list__tile__title">
  &lt;
  <span class="list__tile__mask">
    str
  </span>
  ong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect should render buttons correctly when using items array with segmented prop 1`] = `

<div tabindex="0"
     data-uid="34"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--segmented input-group--single-line primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          Hello
        </div>
      </button>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select  menu__content--dropdown"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul class="list">
            <li>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Hello
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VSelect should render buttons correctly when using slot with segmented prop 1`] = `

<div tabindex="0"
     data-uid="44"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--segmented input-group--single-line primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div>
        Hello
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select  menu__content--dropdown"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul class="list">
            <li>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Hello
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when not using scope slot 1`] = `

<div tabindex="0"
     data-uid="72"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div class="input-group__selections__comma">
        Text 0
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul class="list">
            <li>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Text 0
                  </div>
                </div>
              </a>
            </li>
            <li>
              <a class="list__tile list__tile--link">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Text 1
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when not using v-list-tile in item scope slot 1`] = `

<div tabindex="0"
     data-uid="63"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div class="input-group__selections__comma">
        Text 0
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul class="list">
            <li>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    0
                  </div>
                </div>
              </a>
            </li>
            <li>
              <a class="list__tile list__tile--link">
                <div class="list__tile__content red lighten-1">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when using v-list-tile in item scope slot 1`] = `

<div tabindex="0"
     data-uid="53"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div class="input-group__selections__comma">
        Text 0
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul class="list">
            <li class>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                Text 0
              </a>
            </li>
            <li class="red lighten-1">
              <a class="list__tile list__tile--link">
                Text 1
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
  </div>
</div>

`;
